build.sbt redefinition for cross-build script purposes